apps/kube-prometheus-stack/overlays/ops/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    link.argocd.argoproj.io/external-link: https://prometheus.devxp-tech.io
spec:
  hosts:
    - "prometheus.devxp-tech.io"
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 9090
            host: prometheus-prometheus.monitoring.svc.cluster.local

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    link.argocd.argoproj.io/external-link: https://alertmanager.devxp-tech.io
spec:
  hosts:
    - "alertmanager.devxp-tech.io"
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: prometheus-alertmanager.monitoring.svc.cluster.local
            port:
              number: 9093
